testsuite/bad/bad008.jl
  int main() { 
    if (false)
       return 0; 
}
